fixed when try to click on note line that is covered by note line image

--- a/pub/src/Measure.css
+++ b/pub/src/Measure.css
@@ -35,6 +35,14 @@
     z-index: -1;
 }
 
+.highlighted .museStaffNoteLineImage {
+    z-index: -1;
+}
+
+.highlighted .museStaffNoteDotImage {
+    z-index: -1;
+}
+
 .tdHidden {
     display: none;
 }
